--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -56,8 +56,8 @@ jobs:
           file: docker/php/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/php:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/php:${{ github.sha }}
+            ghcr.io/brabijan/kairoflow/php:latest
+            ghcr.io/brabijan/kairoflow/php:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
@@ -71,8 +71,8 @@ jobs:
           file: docker/nginx/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/nginx:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/nginx:${{ github.sha }}
+            ghcr.io/brabijan/kairoflow/nginx:latest
+            ghcr.io/brabijan/kairoflow/nginx:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -209,10 +209,10 @@ jobs:
           cat > values.prod.yaml <<EOF
           image:
             nginx:
-              repository: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/nginx
+              repository: ghcr.io/brabijan/kairoflow/nginx
               tag: ${{ github.sha }}
             php:
-              repository: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/php
+              repository: ghcr.io/brabijan/kairoflow/php
               tag: ${{ github.sha }}
           
           ingress:
