fix: Remove --create-namespace flag from Helm deployment
The namespace is already created in the infrastructure job, so Helm doesn't need to create it again. This was causing ownership metadata conflicts.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -237,10 +237,9 @@ jobs:
         env:
           KUBECONFIG: ${{ github.workspace }}/kubeconfig
         run: |
-          # Upgrade or install
+          # Upgrade or install (namespace already created in infrastructure job)
           helm upgrade --install kairoflow ./helm/kairoflow \
             --namespace kairoflow \
-            --create-namespace \
             --values values.prod.yaml \
             --wait \
             --timeout 10m
