feat: Configure production domain kairoflow.carpiftw.cz

--- a/helm/kairoflow/values.yaml
+++ b/helm/kairoflow/values.yaml
@@ -36,7 +36,7 @@ service:
 # Ingress configuration (using Traefik IngressRoute)
 ingress:
   enabled: true
-  host: kairoflow.example.com
+  host: kairoflow.carpiftw.cz
   tls:
     enabled: true
     secretName: kairoflow-tls
