--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -56,8 +56,8 @@ jobs:
           file: docker/php/Dockerfile
           push: true
           tags: |
-            ghcr.io/brabijan/kairoflow/php:latest
-            ghcr.io/brabijan/kairoflow/php:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/php:latest
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/php:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
@@ -71,136 +71,15 @@ jobs:
           file: docker/nginx/Dockerfile
           push: true
           tags: |
-            ghcr.io/brabijan/kairoflow/nginx:latest
-            ghcr.io/brabijan/kairoflow/nginx:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/nginx:latest
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/nginx:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-  infrastructure:
-    name: Update Infrastructure Secrets
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.28.0'
-
-      - name: Configure kubectl
-        run: |
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
-          chmod 600 kubeconfig
-
-      - name: Create namespace if not exists with Helm metadata
-        env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          kubectl create namespace kairoflow --dry-run=client -o yaml | kubectl apply -f -
-          kubectl label namespace kairoflow app.kubernetes.io/managed-by=Helm --overwrite
-          kubectl annotate namespace kairoflow meta.helm.sh/release-name=kairoflow --overwrite
-          kubectl annotate namespace kairoflow meta.helm.sh/release-namespace=kairoflow --overwrite
-
-      - name: Update GHCR secret
-        env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          kubectl create secret docker-registry ghcr-secret \
-            --namespace=kairoflow \
-            --docker-server=ghcr.io \
-            --docker-username=${{ github.actor }} \
-            --docker-password=${{ secrets.GITHUB_TOKEN }} \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Update database secret
-        if: env.DATABASE_HOST != ''
-        env:
-          DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
-          DATABASE_USER: ${{ secrets.DATABASE_USER }}
-          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-          DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          kubectl create secret generic kairoflow-database-secret \
-            --namespace=kairoflow \
-            --from-literal=host="${DATABASE_HOST}" \
-            --from-literal=port="5432" \
-            --from-literal=name="${DATABASE_NAME}" \
-            --from-literal=user="${DATABASE_USER}" \
-            --from-literal=password="${DATABASE_PASSWORD}" \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Update Redis secret
-        if: env.REDIS_HOST != ''
-        env:
-          REDIS_HOST: ${{ secrets.REDIS_HOST }}
-          REDIS_PORT: ${{ secrets.REDIS_PORT }}
-          REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          kubectl create secret generic kairoflow-redis-secret \
-            --namespace=kairoflow \
-            --from-literal=host="${REDIS_HOST}" \
-            --from-literal=port="${REDIS_PORT:-6379}" \
-            --from-literal=password="${REDIS_PASSWORD}" \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Update MinIO secret
-        if: env.MINIO_ENDPOINT != ''
-        env:
-          MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
-          MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
-          MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          kubectl create secret generic kairoflow-minio-secret \
-            --namespace=kairoflow \
-            --from-literal=endpoint="${MINIO_ENDPOINT}" \
-            --from-literal=accessKey="${MINIO_ACCESS_KEY}" \
-            --from-literal=secretKey="${MINIO_SECRET_KEY}" \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Update OpenAI secret
-        if: env.OPENAI_API_KEY != ''
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          kubectl create secret generic kairoflow-openai-secret \
-            --namespace=kairoflow \
-            --from-literal=apiKey="${OPENAI_API_KEY}" \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Update application secrets
-        env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
-        run: |
-          # Generate secrets if not provided
-          APP_SECRET="${{ secrets.APP_SECRET }}"
-          JWT_SECRET="${{ secrets.JWT_SECRET }}"
-          
-          if [ -z "$APP_SECRET" ]; then
-            APP_SECRET=$(openssl rand -hex 32)
-          fi
-          
-          if [ -z "$JWT_SECRET" ]; then
-            JWT_SECRET=$(openssl rand -hex 32)
-          fi
-          
-          kubectl create secret generic kairoflow-app-secret \
-            --namespace=kairoflow \
-            --from-literal=appSecret="${APP_SECRET}" \
-            --from-literal=jwtSecret="${JWT_SECRET}" \
-            --dry-run=client -o yaml | kubectl apply -f -
 
   deploy:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
-    needs: [build, infrastructure]
+    needs: build
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.event.inputs.deploy == 'true'
     
     steps:
@@ -217,32 +96,85 @@ jobs:
           echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
           chmod 600 kubeconfig
 
-      - name: Update Helm values
+      - name: Create Helm values
         run: |
+          # Generate secrets if not provided
+          APP_SECRET="${{ secrets.APP_SECRET }}"
+          JWT_SECRET="${{ secrets.JWT_SECRET }}"
+          
+          if [ -z "$APP_SECRET" ]; then
+            APP_SECRET=$(openssl rand -hex 32)
+          fi
+          
+          if [ -z "$JWT_SECRET" ]; then
+            JWT_SECRET=$(openssl rand -hex 32)
+          fi
+
           cat > values.prod.yaml <<EOF
+          # Image configuration
           image:
             nginx:
-              repository: ghcr.io/brabijan/kairoflow/nginx
+              repository: ghcr.io/${{ github.repository_owner }}/kairoflow/nginx
               tag: ${{ github.sha }}
             php:
-              repository: ghcr.io/brabijan/kairoflow/php
+              repository: ghcr.io/${{ github.repository_owner }}/kairoflow/php
               tag: ${{ github.sha }}
           
+          # Ingress configuration
           ingress:
+            enabled: true
             host: ${{ secrets.INGRESS_HOST || 'kairoflow.example.com' }}
+            tls:
+              enabled: true
+              secretName: kairoflow-tls
           
+          # GitHub Container Registry authentication
           ghcr:
             username: ${{ github.actor }}
             password: ${{ secrets.GITHUB_TOKEN }}
+          
+          # Database configuration
+          database:
+            host: "${{ secrets.DATABASE_HOST }}"
+            port: "${{ secrets.DATABASE_PORT || '5432' }}"
+            name: "${{ secrets.DATABASE_NAME || 'kairoflow' }}"
+            user: "${{ secrets.DATABASE_USER }}"
+            password: "${{ secrets.DATABASE_PASSWORD }}"
+          
+          # Redis configuration
+          redis:
+            host: "${{ secrets.REDIS_HOST }}"
+            port: "${{ secrets.REDIS_PORT || '6379' }}"
+            password: "${{ secrets.REDIS_PASSWORD }}"
+          
+          # MinIO/S3 configuration
+          minio:
+            endpoint: "${{ secrets.MINIO_ENDPOINT }}"
+            accessKey: "${{ secrets.MINIO_ACCESS_KEY }}"
+            secretKey: "${{ secrets.MINIO_SECRET_KEY }}"
+            useSSL: true
+          
+          # OpenAI configuration
+          openai:
+            apiKey: "${{ secrets.OPENAI_API_KEY }}"
+          
+          # Application secrets
+          appSecrets:
+            appSecret: "${APP_SECRET}"
+            jwtSecret: "${JWT_SECRET}"
+          
+          # Namespace
+          namespace: kairoflow
           EOF
 
       - name: Deploy with Helm
         env:
           KUBECONFIG: ${{ github.workspace }}/kubeconfig
         run: |
-          # Upgrade or install (namespace already created in infrastructure job)
+          # Deploy application with Helm (creates namespace and all resources)
           helm upgrade --install kairoflow ./helm/kairoflow \
             --namespace kairoflow \
+            --create-namespace \
             --values values.prod.yaml \
             --wait \
             --timeout 10m
