fix: Force GitHub to use updated workflow
- Updated comments to trigger workflow refresh
- Workflow now correctly handles existing namespaces
- No --create-namespace flag, using kubectl apply instead

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -171,10 +171,12 @@ jobs:
         env:
           KUBECONFIG: ${{ github.workspace }}/kubeconfig
         run: |
-          # Deploy application with Helm (creates namespace and all resources)
+          # Ensure namespace exists (create if needed, skip if exists)
+          kubectl create namespace kairoflow --dry-run=client -o yaml | kubectl apply -f -
+          
+          # Deploy application with Helm (manages all resources including secrets)
           helm upgrade --install kairoflow ./helm/kairoflow \
             --namespace kairoflow \
-            --create-namespace \
             --values values.prod.yaml \
             --wait \
             --timeout 10m
