--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -56,8 +56,8 @@ jobs:
           file: docker/php/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/php:latest
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/php:${{ github.sha }}
+            ${{ env.REGISTRY }}/brabijan/kairoflow/php:latest
+            ${{ env.REGISTRY }}/brabijan/kairoflow/php:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
@@ -71,8 +71,8 @@ jobs:
           file: docker/nginx/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/nginx:latest
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/kairoflow/nginx:${{ github.sha }}
+            ${{ env.REGISTRY }}/brabijan/kairoflow/nginx:latest
+            ${{ env.REGISTRY }}/brabijan/kairoflow/nginx:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -114,10 +114,10 @@ jobs:
           # Image configuration
           image:
             nginx:
-              repository: ghcr.io/${{ github.repository_owner }}/kairoflow/nginx
+              repository: ghcr.io/brabijan/kairoflow/nginx
               tag: ${{ github.sha }}
             php:
-              repository: ghcr.io/${{ github.repository_owner }}/kairoflow/php
+              repository: ghcr.io/brabijan/kairoflow/php
               tag: ${{ github.sha }}
           
           # Ingress configuration
