--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,9 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - .:/var/www/html
+      - .:/var/www/html:delegated
       - ./docker/nginx/site.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - app
     networks:
